2010-10-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7

2010-10-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15917: Parse error in Adminpanel in 4.3.7 (Thanks to Ingo Schmitt)

2010-10-06  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.7

2010-10-06  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13650: Information disclosure in sys_actions (DB mount, usergroups) (thanks to Georg Ringer)
	* Fixed bug #15461: RemoveXSS exposes XSS vulnerability for double encoded characters (thanks to Marcus Krause)
	* Follow-up to bug #15461: Added unit tests (thanks to Marcus Krause)
	* Fixed bug #15728: Extension Manager allows to download arbitrary files beyond PATH_site or rootpath (thanks to Marcus Krause)
	* Fixed bug #15729: Sysext setup's user simulation is susceptible to XSS (thanks to Marcus Krause)
	* Fixed bug #15860: Mitigate libpcre recursion crash in email address validation (thanks to Marcus Krause)
	* Fixed bug #15733: Admin Panel is susceptible to XSS (thanks to Helmut Hummel)
	* Fixed bug #15898: It is (still) possible to download arbitrary files through the jumpurl feature (thanks to Helmut Hummel and Marcus Krause)

2010-09-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #15639: Scheduler: Add missing classes and interface to autoload registry (Thanks to Marcus Krause)

2010-09-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper)

2010-09-28  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.6

2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.0.5 to 1.0.6

2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15730: htmlArea RTE: Problem editing a new list entry in list of items with inline markup

2010-09-25  Stanislas Rolland  <typo3@sjbr.ca>
