@@ -1,6 +1,7 @@
 2010-10-06  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
+	* Follow-up to bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
 
 2010-10-06  Steffen Kamper  <steffen@typo3.org>
 
